# dnd-battle

./: .env.example  .gitignore  CLAUDE.md  README.md  ROADMAP.md  STATE.md  docker-compose.yml  run-loop.sh
.claude/: settings.json
.claude/agents/: architect.md  implementer.md  orchestrator.md  pm.md  reviewer.md  tester.md
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a5b6c7800005_add_character_ac_resistances.py  b6c7e100aa86_initial_schema.py  b7c8d9900006_add_room_last_action_seq.py  c1d2e3f40001_add_room_map_columns.py  c8d9ea00aa07_add_token_hidden.py  d2e3f4500002_add_character_portrait_url.py  e3f4a5600003_add_tokens_table.py  f4a5b6700004_add_initiative.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: invites.py  rooms.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  character.py  enums.py  initiative.py  invite_link.py  participant.py  room.py  token.py
backend/app/realtime/: __init__.py  events.py  sequence.py  server.py
backend/app/rules/: __init__.py  abilities.py  attack.py  conditions.py  damage.py  dice.py
backend/app/schemas/: action.py  room.py
backend/app/security/: tokens.py
backend/app/services/: __init__.py  actions.py  board.py  initiative.py  invites.py
backend/app/storage/: __init__.py  maps.py
backend/scripts/: run.sh
backend/tests/: test_abilities.py  test_action_validation.py  test_actions.py  test_attack.py  test_conditions.py  test_damage.py  test_dice.py  test_health.py  test_initiative.py  test_invites_api.py  test_maps_api.py  test_models.py  test_realtime.py  test_rooms_api.py  test_rules_module.py  test_services.py  test_tokens.py  test_tokens_api.py
frontend/: .dockerignore  .gitignore  .npmrc  .prettierignore  Dockerfile  nginx.conf  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
frontend/e2e/: sync.spec.ts
frontend/src/: App.css  App.test.tsx  App.tsx  router.test.ts  router.tsx
frontend/src/api/: client.test.ts  client.ts  types.test.ts  types.ts
frontend/src/board/: AttackControls.test.tsx  AttackControls.tsx  CombatLogPanel.test.tsx  CombatLogPanel.tsx  GridLayer.test.tsx  GridLayer.tsx  HpControls.test.tsx  HpControls.tsx  InitiativeTracker.test.tsx  InitiativeTracker.tsx  MapBoard.test.tsx  MapBoard.tsx  MarkLayer.test.tsx  MarkLayer.tsx  TokenLayer.test.tsx  TokenLayer.tsx  VisibilityControls.test.tsx  VisibilityControls.tsx  combatLog.test.ts  combatLog.ts  grid.test.ts  grid.ts  hp.test.ts  hp.ts  initiative.test.ts  initiative.ts  marks.test.ts  marks.ts  reconcile.test.ts  reconcile.ts  tokens.test.ts  tokens.ts  useImageElement.test.ts  useImageElement.ts  viewport.test.ts  viewport.ts
frontend/src/realtime/: connection.test.ts  connection.ts  status.test.ts  status.ts
frontend/src/screens/: CharacterConfigScreen.test.tsx  CharacterConfigScreen.tsx  CharacterPanel.test.tsx  CharacterPanel.tsx  CreateRoomScreen.test.tsx  CreateRoomScreen.tsx  JoinScreen.test.tsx  JoinScreen.tsx  abilityModifier.ts
