[project]
name = "dnd-battle-backend"
version = "0.1.0"
description = "Backend for the online D&D combat battler (FastAPI, authoritative server)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
