[project]
name = "dnd-battle-backend"
version = "0.1.0"
description = "Backend for the online D&D combat battler (FastAPI, authoritative server)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "python-multipart>=0.0.9",
    "python-socketio>=5.11",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.13",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8/black/isort).
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear,
# C4: comprehensions, SIM: simplify, RUF: ruff-specific.
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
# Tests may use assert-heavy style; nothing special needed yet.
"tests/**" = []

[tool.ruff.format]
quote-style = "double"

# ---------------------------------------------------------------------------
# Mypy — static type checking. Strict on our own code under `app`.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
files = ["app", "tests"]

[[tool.mypy.overrides]]
# Tests use third-party fixtures/decorators without stubs; relax a little.
module = "tests.*"
disallow_untyped_decorators = false

[[tool.mypy.overrides]]
# python-socketio ships no type information (no py.typed); treat as untyped.
module = ["socketio.*"]
ignore_missing_imports = true
